# speechbrain-sandbox

./: pyproject.toml
recipes/CVSS/: cvss_prepare.py
recipes/CVSS/S2ST/: extract_code.py  train.py
recipes/CVSS/S2ST/hparams/: train_fr-en.yaml
